--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/AlexanderSopov/personal-website#readme",
   "dependencies": {
-    "pug": "^0.1.0",
+    "pug": "^2.0.0-alpha7",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.10.2",
+    "pug-lint": "^2.3.0"
   }
 }
