--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "stylus": "^0.54.5"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
     "nodemon": "^1.10.2",
     "pug-lint": "^2.3.0"
   }
